# share-setup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/copilot/skills/: scan-copilot-environment.prompt.md
profiles/default/: profile.toml
profiles/default/copilot/instructions/: copilot-instructions.md
profiles/wes-team/: profile.toml
src/copilot_setup/: __init__.py  cli.py  models.py  packager.py
src/copilot_setup/installer/: __init__.py  copilot_cli.py  copilot_config.py  extensions.py  guided.py  main.py  mcp.py  prereqs.py  troubleshoot.py  tui.py  verify.py
tests/: test_smoke.py
