[project]
name = "copilot-setup"
version = "0.1.0"
description = "Package and deliver curated GitHub Copilot environments for your team"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "jinja2>=3.1",
]

[project.scripts]
copilot-setup = "copilot_setup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_setup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
